# pacifist-chess-simulation

./: CHANGELOG.md  Cargo.toml  README.md  run_until_fail.sh
scripts/: get_stats.sh  run_until_fail.sh
src/: game_animator.rs  main.rs  player.rs
